[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtseg"
version = "0.1.1"
description = "A quick method to plot the DTS EG and acquire relevant statistics in python"
authors = [{name = "Benjamin Dawson", email = "ben.dawson@niqstech.com"}]
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "shapley"
]
